# LedFx

./: .coveragerc  .coveralls.yml  .dockerignore  .env  .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .jshintrc  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  Device.jsx  LICENSE.txt  MANIFEST.in  PARTICLE_DEBUG_IMPLEMENTATION.md  PR-1711-Analysis.md  README.md  README.rst  RUST_EFFECTS_GUIDE.md  Run ledfx - Copy.bat  Run ledfx - Mattallmighty.bat  Run ledfx.bat  SECURITY.md  WebSocket-Client-Management-Feature-Spec.md  __main__.spec  activate.ps1  assets.py  aubio-0.5.0a0-cp310-cp310-win_amd64.whl  bits.py  build_rust_effects.py  client_config.py  copilot-instructions.md  debug_multipart.py  deploy_to_pi.sh  dev-install.sh  droplet_creator.py  (+32 more)
.ci/: sitecustomize.py
.config/: config.json
.devcontainer/: Dockerfile  Dockerfile.pip  README.md  dev-apt-install.sh  devcontainer.json  ledfx-config.yml
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  renovate.json  stale.yml
audio-hotplug/: .gitignore  LICENSE  README.md  TESTING.md  pyproject.toml
audio-hotplug/examples/: list_audio_devices_linux.py  monitor_print.py  test_linux_manual.py
audio-hotplug/src/audio_hotplug/: __init__.py  _base.py  _debounce.py  monitor.py
audio-hotplug/src/audio_hotplug/_platform/: __init__.py  linux.py  macos.py  windows.py
audio-hotplug/tests/: __init__.py  test_callback_scheduling.py  test_debounce.py  test_factory.py
config/: sample_config.yaml
devices/: zengee.py
docs/: Makefile  README.md  README.rst  api.md  api.rst  artnet.rst  chatgpt_connector.md  conf.py  configuring.md  configuring.rst  contents.rst  contributing.md  developer.md  developer.rst  directing_audio.md  directing_audio.rst  global.md  gradient.md  index.html  index.rst  installation.rst  installing.md  installing.rst  launch.md  licenses.md  make.bat  osc.rst  quickstart.rst  requirements-docs.txt  requirements_docs.txt  security.md  sendspin_strategy.md  trouble.md  trouble.rst  websocket.md
frontend/: .eslintcache  .eslintrc  .gitattributes  .gitignore  .prettierrc  .yarnrc.yml  CONTRIBUTING.md  README.md  electron-builder.json  eslintrc.js  package.json  pnpm-lock.yaml  tsconfig.json
frontend_dist/: bundle.js  style.css
icons/: banner.xcf  icon_source.xcf  logo.icns
installer/: ledfx.nsi
ledfx/: __init__.py  __main__.py  assets.py  audio_device_monitor.py  blender.py  color.py  config.py  consts.py  core.py  dedupequeue.py  default_presets.json  default_presets.yaml  displays.py  events.py  git_version  http.py  http_manager.py  mdns_manager.py  mood_detector.py  mood_detector_librosa.py  playlists.py  presets.py  scenes.py  security_utils.py  sentry_config.py  structure_analyzer.py  transitions.py  utils.py  virtuals.py  wled.py  zeroconf.py
ledfx/effects/rust_effects/: Cargo.toml  README.md  build_rust_effects.bat  build_rust_effects.py  build_rust_effects.sh  pyproject.toml
ledfx/effects/rust_effects/src/: lib.rs
ledfx/rust/: .gitignore  Cargo.toml  __init__.py  build_rust.py  pyproject.toml
ledfx/rust/src/: common.rs  lib.rs
ledfx/rust/src/effects/: flame2.rs  mod.rs
ledfx_assets/: __init__.py  icon_source.xcf
ledfx_docker/: .dockerignore  Dockerfile  README  docker-compose-example.yml  start.sh
ledfx_frontend/: __init__.py  asset-manifest.json  bundle.js  electron.js  fonts.css  frontend_config.json  index.html  manifest.json  mdi.css  messages.md  otp.js  precache-manifest.05ef1dac788fd3dfdbedf0b853635635.js  precache-manifest.0d80db913ee7f929dcadffab5195fabc.js  precache-manifest.14baaf60a6e8890ec476d749de6ec7ec.js  precache-manifest.16b5e46d857faf62ccb99810479b2085.js  precache-manifest.1acb7d12a28123e0541e443f5121ef92.js  precache-manifest.204b21c087384a9f409e68dbbb0c6ed3.js  precache-manifest.207fca6ff67dd2dbbe4243456b46fd44.js  precache-manifest.277109863018b10ae4d21788e8b642a9.js  precache-manifest.2c5100ed7aab7257042605a6e716861b.js  precache-manifest.2d5e4f82c069a59e53e43db98e26ffe1.js  precache-manifest.2e4fe711977765fbceef2e06732693f0.js  precache-manifest.368ac5ee6e9cc87c53325aa6031d5205.js  precache-manifest.4185bdbe961f0fc3a67389b0b31b0c81.js  precache-manifest.44df06aca78e49fbb45f3ff81b5bf322.js  precache-manifest.452b00b9ecbbf41d655c700ce4c660d6.js  precache-manifest.53bca45e8cbd4d41ae2748cf4f79d745.js  precache-manifest.5483461c224f80a276c30ba8ae300ed6.js  precache-manifest.55403867b60016a0ef4a17c3e957eefa.js  precache-manifest.562ba10391b4427deab06eb99669ed5e.js  precache-manifest.587eda425bc2c2137bc1a64014b7ca19.js  precache-manifest.5a8e0f7d9b4f201386a77e2b3f5b75a7.js  precache-manifest.5bd3658c7e3f134efeef6d323bdedd73.js  precache-manifest.5e6e76684eb9a535234aac6e31aedb58.js  precache-manifest.62a5fcbccc3ef5ddfcae2296eff3f293.js  precache-manifest.6722e3a9891c3a67616b9615b2e1eb92.js  precache-manifest.6ced34bc0e84ef708f654affd3724065.js  precache-manifest.6d6139f855a3dd03464354e73542dc70.js  precache-manifest.706b04c84e0aaeacea3a65fbc66e097a.js  precache-manifest.73c58839f475fbada74610b8a1519d35.js  (+36 more)
ledfx_frontend_v2/: __init__.py  asset-manifest.json  index.html
ledfx_frontend_v2_old/: asset-manifest.json  manifest.json
ledfxcontroller/: __init__.py  __main__.py  color.py  config.py  consts.py  core.py  http.py  utils.py
loopback/: __init__.py  __main__.py  portaudio_license.txt
pyinstaller_hooks/: hook-aubio.py
rust_effects/: README.md
tests/: Post105Test.bat  conftest.py  ledfxPOST.py  test_api_assets.py  test_api_assets_cached_urls.py  test_api_cache.py  test_api_get_gif_frames.py  test_api_now_playing.py  test_api_sendspin_servers.py  test_apis.py  test_assets.py  test_audio_cleanup.py  test_audio_device_monitor.py  test_audio_device_persistence.py  test_audio_hotplug_hardening.py  test_core_audio_monitoring.py  test_e131_broadcast.py  test_events.py  test_gap_devices.py  test_gradient_extraction.py  test_gradient_integration.py  test_image_cache.py  test_image_security.py  test_instance_id.py  test_ledfx.py  test_now_playing.py  test_now_playing_mpris.py  (+22 more)
(+2103 files in other folders)
