[project]
authors = [
    {name = "LedFx Developers"},
]
license = {text = "GPL-3.0 License"}
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy>=1.26.2,<2.0.0",
    "cffi>=0.16.0",
    "wheel>=0.36.2",
    "aiohttp>=3.9.1,<4.0.0",
    "aiohttp-cors>=0.7.0",
    "aubio>=0.4.9",
    "cython>=3.0.7",
    "certifi>=2023.11.17",
    "multidict>=6.0.4",
    "openrgb-python>=0.2.15",
    "paho-mqtt>=1.6.1",
    "psutil>=5.9.7",
    "pyserial>=3.5",
    "pystray>=0.19.5",
    "python-rtmidi>=1.5.8",
    "requests>=2.31.0",
    "sacn>=1.9.0",
    "sentry-sdk>=1.40.4",
    "sounddevice>=0.4.6",
    "samplerate>=0.2.1",
    "icmplib>=3.0.4",
    "voluptuous>=0.14.1",
    "zeroconf>=0.131.0",
    "pillow>=10.1.0",
    "flux-led>=1.0.4",
    "python-osc>=1.8.3",
    "pybase64~=1.4.0",
    "mss~=10.0.0",
    "setuptools~=80.9.0",
    "uvloop>=0.16.0; sys_platform != \"win32\"",
    "rpi-ws281x>=4.3.0; sys_platform == \"linux\"",
    "stupidartnet>=1.6.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "vnoise>=0.1.0,<1.0.0",
]
name = "LedFx"
version = "2.0.109"
description = "A network based light effect controller"
readme = "README.rst"

[dependency-groups]
dev = [
    "flake8<7.2.1,>=7.2.0",
    "black<25.1.1,>=25.1.0",
    "isort<6.0.2,>=6.0.1",
    "pre-commit<4.2.1,>=4.2.0",
    "bokeh<4.0.0,>=3.3.3",
    "pytest<9.0.0,>=8.0.0",
    "pytest-order<2.0.0,>=1.2.0",
    "pyinstaller<7.0.0,>=6.3.0",
]
docs = [
    "sphinx<8.2.4; python_version >= \"3.10\"",
    "sphinxcontrib-websupport==2.0.0; python_version >= \"3.10\"",
    "sphinxcontrib-httpdomain==1.8.1; python_version >= \"3.10\"",
    "sphinx-autodoc-typehints==2.5.0; python_version >= \"3.10\"",
    "sphinx-autodoc-annotation==1.0-1; python_version >= \"3.10\"",
    "sphinx-autobuild; python_version >= \"3.10\"",
    "sphinx-rtd-theme==3.0.2; python_version >= \"3.10\"",
    "sphinx-toolbox==4.0.0; python_version >= \"3.10\"",
    "rstcheck==6.2.5; python_version >= \"3.10\"",
    "sphinx-copybutton==0.5.2; python_version >= \"3.10\"",
    "myst-parser>=3.0.1",
    "linkify-it-py>=2.0.3",
    "sphinxcontrib-mermaid; python_version >= \"3.10\"",
]

[tool.pdm.build]
includes = [
    "ledfx",
    "ledfx_frontend",
    "ledfx_assets",
    "loopback",
    "README.rst",
    "AUTHORS.rst",
    "CHANGELOG.rst",
    "LICENSE.txt",
    "ledfx.env",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project.optional-dependencies]
hue = [
    "python-mbedtls==2.9.2; (platform_machine != \"aarch64\" and platform_machine != \"armv7l\") and sys_platform == \"linux\" or sys_platform == \"win32\" or sys_platform == \"darwin\"",
]

[project.scripts]
ledfx = "ledfx.__main__:main"
ledfx-loopback-install = "loopback.__main__:copy_lib"
[tool.pytest.ini_options]
addopts = "tests"
testpaths = "tests"
norecursedirs = [
    "dist",
    "build",
    ".tox",
]
filterwarnings = "ignore::DeprecationWarning"

[tool.uv]
# We want to use copy here, since symlink mode means we can't use our own portaudio dll
# A bit slower, but it works for our use case
link-mode = "copy"
default-groups = []


[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
# The following are the default values applied when profile="black"
# multi_line_output = 3
# include_trailing_comma = True
# force_grid_wrap = 0
# use_parentheses = True
# ensure_newline_before_comments = True