[metadata]
description = A network based light effect controller
long-description = file: README.rst
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Natural Language :: English

[tox:tox]
requires = tox-venv
           setuptools >= 40.8.0
           wheel

[options]
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    tests
    tests.*

[test]
addopts = tests

[tool:pytest]
testpaths = tests
norecursedirs =
    dist
    build
    .tox

[build_sphinx]
source_dir = docs/source
build_dir = docs/build

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py