[metadata]
description = A network based light effect controller
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Natural Language :: English

[options]
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    tests
    tests.*

[tox:tox]
requires = tox-venv
           setuptools >= 40.8.0
           wheel

[test]
addopts = tests

[tool:pytest]
testpaths = tests
norecursedirs =
    dist
    build
    .tox

[build_sphinx]
source_dir = docs/source
build_dir = docs/build

[flake8]
max-line-length = 79
extend-ignore = E203, W503
ignore =
    E501,
    F601,
    F811,
    F841
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    node_modules