[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ledfx-rust-effects"
dynamic = ["version"]
description = "High-performance Rust effects for LedFx"
authors = [
    {name = "LedFx Team"}
]
license = {text = "MIT"}
requires-python = ">=3.9,<3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "numpy>=1.24.0,<2.1.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.0,<2.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
