[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ledfx-rust-effects"
version = "0.1.0"
description = "High-performance Rust effects for LedFx"
authors = [
    {name = "LedFx Team"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=1.16.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
